Fix submit button being visible when it should not

--- a/frontend/src/index/css/question-view.css
+++ b/frontend/src/index/css/question-view.css
@@ -3,7 +3,7 @@
 	width: 25px;
 	margin:100px 0 0 0;
 	padding: 15px;
-	display: none;
+	display: inline-block;
 	-webkit-animation: rotation 2s infinite linear; /* Chr, Saf */
 	animation: rotation 2s infinite linear; /* IE >9, Fx >15, Op >12.0 */
 }
@@ -51,7 +51,8 @@
 	margin:0;
 	padding:0;
 }
-#submit-button.hidden {
+
+#submit-button.hidden, #loading-icon.hidden {
 	display:none;
 }
 
